--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     $(document).ready(function() {
         if (/Android|webOS|iPhone|iPad|Mac|Macintosh|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
             $('body').css('width', 'auto');
-            $('#yuansfer-logo').prop("src","https://yuansfercom.sharepoint.com/sites/Yuansfer/Shared%20Documents/Products%20Resources/Brand%20Logos/Yuansfer%20Logo/512x512.png");
+            $('#yuansfer-logo').prop("src","https://yuansfer1.oss-accelerate.aliyuncs.com/official/20210424/792b8d24c87af120e6e33a69dfb9d998.png");
             $('#yuansfer-logo').width("100px")
         } else {
             $('body').css('width', '1100px');
